--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <p>git commit -m"your meangingful commit massage"</p>
         <p>git push</p>
     </div>
+    <img src="images/IMG_20240120_205418_205.jpg" alt="">
 </body>
 </html>
